macos/Classes/trtc_c_api/trtc_cloud.h

// 3.5
trtc_c_api int trtc_cloud_set_mix_transcoding_config(trtc_cloud instance,
                                                     trtc_transcoding_config_t* config);
// 3.6
trtc_c_api int trtc_cloud_start_publish_media_stream(trtc_cloud instance,
                                                     trtc_publish_target_t* target,
                                                     trtc_stream_encoder_param_t* params,
                                                     trtc_stream_mixing_config_t* config);
// 3.7
trtc_c_api int trtc_cloud_update_publish_media_stream(trtc_cloud instance,
                                                      const char* task_id,
                                                      trtc_publish_target_t* target,
                                                      trtc_stream_encoder_param_t* params,
                                                      trtc_stream_mixing_config_t* config);
// 3.8
trtc_c_api int trtc_cloud_stop_publish_media_stream(trtc_cloud instance, const char* taskId);
// 4.1 4.2  front_camera
trtc_c_api int trtc_cloud_start_local_preview(trtc_cloud instance, bool front_camera, tx_view view);
// 4.3
trtc_c_api int trtc_cloud_update_local_view(trtc_cloud instance, tx_view view);
// 4.4
trtc_c_api int trtc_cloud_stop_local_preview(trtc_cloud instance);
// 4.5
trtc_c_api int trtc_cloud_mute_local_video(trtc_cloud instance, int stream_type, bool mute);
// 4.6
trtc_c_api int trtc_cloud_set_video_mute_image(trtc_cloud instance,
                                               trtc_image_buffer_t* image,
                                               int fps);
// 4.7
trtc_c_api int trtc_cloud_start_remote_view(trtc_cloud instance,
                                            const char* user_id,
                                            int stream_type,
                                            tx_view view);
// 4.8
trtc_c_api int trtc_cloud_update_remote_view(trtc_cloud instance,
                                             const char* user_id,
                                             int stream_type,
                                             tx_view view);
// 4.9
trtc_c_api int trtc_cloud_stop_remote_view(trtc_cloud instance,
                                           const char* user_id,
                                           int stream_type);
// 4.10
trtc_c_api int trtc_cloud_stop_all_remote_view(trtc_cloud instance);
// 4.12
trtc_c_api int trtc_cloud_mute_all_remote_video_streams(trtc_cloud instance, bool mute);
// 4.13
trtc_c_api int trtc_cloud_set_video_encoder_param(trtc_cloud instance,
                                                  trtc_video_enc_param_t param);
// 4.14
trtc_c_api int trtc_cloud_set_network_qos_param(trtc_cloud instance,
                                                trtc_network_qos_param_t param);
// 4.15
trtc_c_api int trtc_cloud_set_local_render_params(trtc_cloud instance,
                                                  int video_rotation,
                                                  int fill_mode,
                                                  int mirror_type);
// 4.16
trtc_c_api int trtc_cloud_set_remote_render_params(trtc_cloud instance,
                                                   const char* user_id,
                                                   int stream_type,
                                                   trtc_render_params_t param);
// 4.17
trtc_c_api int trtc_cloud_set_video_encoder_rotation(trtc_cloud instance, int rotation);
// 4.18
trtc_c_api int trtc_cloud_set_video_encoder_mirror(trtc_cloud instance, bool mirror);
// 4.20
trtc_c_api int trtc_cloud_enable_small_video_stream(trtc_cloud instance,
                                                    bool enable,
                                                    trtc_video_enc_param_t param);