lib/bindings/trtc/ffi_bindings.dart


  late final _set_mix_transcoding_configPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  trtc_cloud, ffi.Pointer<trtc_transcoding_config_t>)>>(
      'trtc_cloud_set_mix_transcoding_config');
  late final _set_mix_transcoding_config =
      _set_mix_transcoding_configPtr.asFunction<
          int Function(trtc_cloud, ffi.Pointer<trtc_transcoding_config_t>)>();

  /// 3.6
  int start_publish_media_stream(
    trtc_cloud instance,
    ffi.Pointer<trtc_publish_target_t> target,
    ffi.Pointer<trtc_stream_encoder_param_t> params,
    ffi.Pointer<trtc_stream_mixing_config_t> config,
  ) {
    return _start_publish_media_stream(
      instance,
      target,
      params,
      config,
    );
  }

  late final _start_publish_media_streamPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  trtc_cloud,
                  ffi.Pointer<trtc_publish_target_t>,
                  ffi.Pointer<trtc_stream_encoder_param_t>,
                  ffi.Pointer<trtc_stream_mixing_config_t>)>>(
      'trtc_cloud_start_publish_media_stream');
  late final _start_publish_media_stream =
      _start_publish_media_streamPtr.asFunction<
          int Function(
              trtc_cloud,
              ffi.Pointer<trtc_publish_target_t>,
              ffi.Pointer<trtc_stream_encoder_param_t>,
              ffi.Pointer<trtc_stream_mixing_config_t>)>();

  /// 3.7
  int update_publish_media_stream(
    trtc_cloud instance,
    ffi.Pointer<ffi.Char> task_id,
    ffi.Pointer<trtc_publish_target_t> target,
    ffi.Pointer<trtc_stream_encoder_param_t> params,
    ffi.Pointer<trtc_stream_mixing_config_t> config,
  ) {
    return _update_publish_media_stream(
      instance,
      task_id,
      target,
      params,
      config,
    );
  }

  late final _update_publish_media_streamPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  trtc_cloud,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<trtc_publish_target_t>,
                  ffi.Pointer<trtc_stream_encoder_param_t>,
                  ffi.Pointer<trtc_stream_mixing_config_t>)>>(
      'trtc_cloud_update_publish_media_stream');
  late final _update_publish_media_stream =
      _update_publish_media_streamPtr.asFunction<
          int Function(
              trtc_cloud,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<trtc_publish_target_t>,
              ffi.Pointer<trtc_stream_encoder_param_t>,
              ffi.Pointer<trtc_stream_mixing_config_t>)>();

  /// 3.8
  int stop_publish_media_stream(
    trtc_cloud instance,
    ffi.Pointer<ffi.Char> taskId,
  ) {
    return _stop_publish_media_stream(
      instance,
      taskId,
    );
  }

  late final _stop_publish_media_streamPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(trtc_cloud, ffi.Pointer<ffi.Char>)>>(
      'trtc_cloud_stop_publish_media_stream');
  late final _stop_publish_media_stream = _stop_publish_media_streamPtr
      .asFunction<int Function(trtc_cloud, ffi.Pointer<ffi.Char>)>();

  /// 4.1 4.2  front_camera
  int start_local_preview(
    trtc_cloud instance,
    bool front_camera,
    tx_view view,
  ) {
    return _start_local_preview(
      instance,
      front_camera,
      view,
    );
  }

  late final _start_local_previewPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Bool, tx_view)>>(
      'trtc_cloud_start_local_preview');
  late final _start_local_preview = _start_local_previewPtr
      .asFunction<int Function(trtc_cloud, bool, tx_view)>();

  /// 4.3
  int update_local_view(
    trtc_cloud instance,
    tx_view view,
  ) {
    return _update_local_view(
      instance,
      view,
    );
  }

  late final _update_local_viewPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, tx_view)>>(
          'trtc_cloud_update_local_view');
  late final _update_local_view =
      _update_local_viewPtr.asFunction<int Function(trtc_cloud, tx_view)>();

  /// 4.4
  int stop_local_preview(
    trtc_cloud instance,
  ) {
    return _stop_local_preview(
      instance,
    );
  }

  late final _stop_local_previewPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_stop_local_preview');
  late final _stop_local_preview =
      _stop_local_previewPtr.asFunction<int Function(trtc_cloud)>();

  /// 4.5
  int mute_local_video(
    trtc_cloud instance,
    int stream_type,
    bool mute,
  ) {
    return _mute_local_video(
      instance,
      stream_type,
      mute,
    );
  }

  late final _mute_local_videoPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Int, ffi.Bool)>>(
      'trtc_cloud_mute_local_video');
  late final _mute_local_video =
      _mute_local_videoPtr.asFunction<int Function(trtc_cloud, int, bool)>();

  /// 4.6
  int set_video_mute_image(
    trtc_cloud instance,
    ffi.Pointer<trtc_image_buffer_t> image,
    int fps,
  ) {
    return _set_video_mute_image(
      instance,
      image,
      fps,
    );
  }

  late final _set_video_mute_imagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Pointer<trtc_image_buffer_t>,
              ffi.Int)>>('trtc_cloud_set_video_mute_image');
  late final _set_video_mute_image = _set_video_mute_imagePtr.asFunction<
      int Function(trtc_cloud, ffi.Pointer<trtc_image_buffer_t>, int)>();

  /// 4.7
  int start_remote_view(
    trtc_cloud instance,
    ffi.Pointer<ffi.Char> user_id,
    int stream_type,
    tx_view view,
  ) {
    return _start_remote_view(
      instance,
      user_id,
      stream_type,
      view,
    );
  }

  late final _start_remote_viewPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Pointer<ffi.Char>, ffi.Int,
              tx_view)>>('trtc_cloud_start_remote_view');
  late final _start_remote_view = _start_remote_viewPtr.asFunction<
      int Function(trtc_cloud, ffi.Pointer<ffi.Char>, int, tx_view)>();

  /// 4.8
  int update_remote_view(
    trtc_cloud instance,
    ffi.Pointer<ffi.Char> user_id,
    int stream_type,
    tx_view view,
  ) {
    return _update_remote_view(
      instance,
      user_id,
      stream_type,
      view,
    );
  }

  late final _update_remote_viewPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Pointer<ffi.Char>, ffi.Int,
              tx_view)>>('trtc_cloud_update_remote_view');
  late final _update_remote_view = _update_remote_viewPtr.asFunction<
      int Function(trtc_cloud, ffi.Pointer<ffi.Char>, int, tx_view)>();

  /// 4.9
  int stop_remote_view(
    trtc_cloud instance,
    ffi.Pointer<ffi.Char> user_id,
    int stream_type,
  ) {
    return _stop_remote_view(
      instance,
      user_id,
      stream_type,
    );
  }

  late final _stop_remote_viewPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('trtc_cloud_stop_remote_view');
  late final _stop_remote_view = _stop_remote_viewPtr
      .asFunction<int Function(trtc_cloud, ffi.Pointer<ffi.Char>, int)>();

  /// 4.10
  int stop_all_remote_view(
    trtc_cloud instance,
  ) {
    return _stop_all_remote_view(
      instance,
    );
  }

  late final _stop_all_remote_viewPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_stop_all_remote_view');
  late final _stop_all_remote_view =
      _stop_all_remote_viewPtr.asFunction<int Function(trtc_cloud)>();

  /// 4.12
  int mute_all_remote_video_streams(
    trtc_cloud instance,
    bool mute,
  ) {
    return _mute_all_remote_video_streams(
      instance,
      mute,
    );
  }

  late final _mute_all_remote_video_streamsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Bool)>>(
          'trtc_cloud_mute_all_remote_video_streams');
  late final _mute_all_remote_video_streams = _mute_all_remote_video_streamsPtr
      .asFunction<int Function(trtc_cloud, bool)>();

  /// 4.13
  int set_video_encoder_param(
    trtc_cloud instance,
    trtc_video_enc_param_t param,
  ) {
    return _set_video_encoder_param(
      instance,
      param,
    );
  }

  late final _set_video_encoder_paramPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud,
              trtc_video_enc_param_t)>>('trtc_cloud_set_video_encoder_param');
  late final _set_video_encoder_param = _set_video_encoder_paramPtr
      .asFunction<int Function(trtc_cloud, trtc_video_enc_param_t)>();

  /// 4.14
  int set_network_qos_param(
    trtc_cloud instance,
    trtc_network_qos_param_t param,
  ) {
    return _set_network_qos_param(
      instance,
      param,
    );
  }

  late final _set_network_qos_paramPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud,
              trtc_network_qos_param_t)>>('trtc_cloud_set_network_qos_param');
  late final _set_network_qos_param = _set_network_qos_paramPtr
      .asFunction<int Function(trtc_cloud, trtc_network_qos_param_t)>();

  /// 4.15
  int set_local_render_params(
    trtc_cloud instance,
    int video_rotation,
    int fill_mode,
    int mirror_type,
  ) {
    return _set_local_render_params(
      instance,
      video_rotation,
      fill_mode,
      mirror_type,
    );
  }

  late final _set_local_render_paramsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Int, ffi.Int,
              ffi.Int)>>('trtc_cloud_set_local_render_params');
  late final _set_local_render_params = _set_local_render_paramsPtr
      .asFunction<int Function(trtc_cloud, int, int, int)>();

  /// 4.16
  int set_remote_render_params(
    trtc_cloud instance,
    ffi.Pointer<ffi.Char> user_id,
    int stream_type,
    trtc_render_params_t param,
  ) {
    return _set_remote_render_params(
      instance,
      user_id,
      stream_type,
      param,
    );
  }

  late final _set_remote_render_paramsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Pointer<ffi.Char>, ffi.Int,
              trtc_render_params_t)>>('trtc_cloud_set_remote_render_params');
  late final _set_remote_render_params =
      _set_remote_render_paramsPtr.asFunction<
          int Function(
              trtc_cloud, ffi.Pointer<ffi.Char>, int, trtc_render_params_t)>();

  /// 4.17
  int set_video_encoder_rotation(
    trtc_cloud instance,
    int rotation,
  ) {
    return _set_video_encoder_rotation(
      instance,
      rotation,
    );
  }

  late final _set_video_encoder_rotationPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Int)>>(
          'trtc_cloud_set_video_encoder_rotation');
  late final _set_video_encoder_rotation = _set_video_encoder_rotationPtr
      .asFunction<int Function(trtc_cloud, int)>();

  /// 4.18
  int set_video_encoder_mirror(
    trtc_cloud instance,
    bool mirror,
  ) {
    return _set_video_encoder_mirror(
      instance,
      mirror,
    );
  }

  late final _set_video_encoder_mirrorPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Bool)>>(
          'trtc_cloud_set_video_encoder_mirror');
  late final _set_video_encoder_mirror =
      _set_video_encoder_mirrorPtr.asFunction<int Function(trtc_cloud, bool)>();

  /// 4.20
  int enable_small_video_stream(
    trtc_cloud instance,
    bool enable,
    trtc_video_enc_param_t param,
  ) {
    return _enable_small_video_stream(
      instance,
      enable,
      param,
    );
  }

  late final _enable_small_video_streamPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Bool,
              trtc_video_enc_param_t)>>('trtc_cloud_enable_small_video_stream');
  late final _enable_small_video_stream = _enable_small_video_streamPtr
      .asFunction<int Function(trtc_cloud, bool, trtc_video_enc_param_t)>();
